<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Startseite"
    android:orientation="vertical"
    android:weightSum="4">

    <Button
        android:id="@+id/stimmungserfassung"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/stimmungserfassung"
        android:layout_margin="7dp"/>

    <Button
        android:id="@+id/auswertung_eintellungen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/auswertung"
        android:layout_margin="7dp"/>
    <Button
        android:id="@+id/einstellungen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/einstellungen"
        android:layout_margin="7dp"/>
    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/ausloggen"
        android:layout_margin="7dp"/>
</LinearLayout>