<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stimmungserfassung"
    android:weightSum="2"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/text_wetter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            ></TextView>
        <ImageView
            android:id="@+id/stimmungserfassung_skala"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/smile"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">
        <Button
            android:id="@+id/stimmungserfassung_plus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:layout_margin="7dp"/>
        <Button
            android:id="@+id/stimmungserfassung_minus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:layout_margin="7dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:id="@+id/stimmungserfassung_zurueck"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/zurueck"
                android:layout_margin="7dp"/>
            <Button
                android:id="@+id/stimmungserfassung_speichern"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/speichern"
                android:layout_margin="7dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>